# Jobsmith

./: .dockerignore  .env.example  .gitignore  .venv  ARCHITECTURE.md  BACKGROUND_SEARCH_PLAN.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENT_PLAN.md  PIPELINE_INTELLIGENCE_PLAN.md  README-DESKTOP.md  README-IOS-STANDALONE.md  README-IOS.md  README.md  REPO.md  SECURITY.md  config.example.yaml  docker-compose.skyvern.yml  docker-compose.yml  docker-entrypoint.sh  node_modules  package-lock.json  package.json  pytest.ini  requirements-optional.txt  requirements.txt  setup.sh  start_server.sh  test_navigator.py
.github/: PULL_REQUEST_TEMPLATE.md
backend/: ai_engine.py  app_state.py  applicant_assist.py  background_tasks.py  browser_use_agent.py  cookie_import.py  database.py  extension_api.py  linkedin_profile_import.py  main.py  page_extractor.py  paths.py  prompt_registry.py  resume_generator.py  resume_parser.py  salary_estimator.py  session_import.py  session_manager.py  version.py
docs/: README-GHPAGES.md  _config.yml  index.md  privacy-policy.md  support.md
extension/: README.md
frontend/: index.html  style.css
ios/: .gitignore  project.yml
ios-standalone/: .gitignore  Signing.xcconfig  project.yml
n8n/: workflows.json
packaging/: desktop_entry.py  jobsmith-backend.spec  release-notes.md
scripts/: build_desktop.sh  bump_version.sh  check_apply_js_sync.py  release.sh  (+2 more)
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json  remote.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
tests/: conftest.py  (+38 more)
(+414 files in other folders)
