[package]
name = "app"
# Keep in sync with package.json — scripts/bump_version.sh rewrites both and
# scripts/release.sh refuses to tag when they disagree.
version = "0.2.4"
description = "Jobsmith desktop shell"
authors = ["TheDevRo"]
license = ""
repository = "https://github.com/TheDevRo/Jobsmith"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.11.3", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-dialog = "2.7.1"
